--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,54 +6,14 @@
 {% csrf_token %}
     <main role="main" class="container">
         <div class="row">
-            <div class="col-md-3 mb-3 mt-1">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="h2">
-                            {{ author.get_full_name }}
-                        </div>
-                        <div class="h3 text-muted">
-                            {{ author.username }}
-                        </div>
-                    </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                <div class="h6 text-muted">
-                                    Подписчиков: XXX <br />
-                                    Подписан: XXX
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="h6 text-muted">
-                                    Записей: {{ author.posts.count }}
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-9">                
-                    {% for post in page %}
-                        <div class="card mb-3 mt-1 shadow-sm">
-                            <div class="card-body">
-                                <p class="card-text">
-                                    <a href="/{{ post.author.username }}/"><strong class="d-block text-gray-dark">@{{ post.author.username }}</strong></a>
-                                    {{ post.text|linebreaksbr }}
-                                </p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group ">
-                                        <a class="btn btn-sm text-muted" href="/{{ post.author.username }}/{{ post.id }}/" role="button">Добавить комментарий</a>
-                                        {% if request.user == post.author %}
-                                            <a class="btn btn-sm text-muted" href="/{{ post.author.username }}/{{ post.id }}/edit" role="button">Редактировать</a>
-                                        {% endif %}
-                                    </div>
-                                <small class="text-muted">{{ post.pub_date|date:"d M Y H:i " }}</small>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                    {% if page.has_other_pages %}
-                        {% include "paginator.html" with items=page paginator=paginator%}
-                    {% endif %}
+            {% include 'includes/profile_card.html' with author=author %}
+            <div class="col-md-9">                
+                {% for post in page %}
+                    {% include 'includes/post_card.html' with post=post name=name%}
+                {% endfor %}
+                {% if page.has_other_pages %}
+                    {% include "includes/paginator.html" with items=page paginator=paginator%}
+                {% endif %}
             </div>
         </div>
     </main> 
